--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/cbeulke/simple-kanban/issues"
   },
-  "homepage": "https://github.com/cbeulke/simple-kanban#readme"
+  "homepage": "https://github.com/cbeulke/simple-kanban#readme",
+  "dependencies": {
+    "hapi": "^15.1.1",
+    "inert": "^4.0.2"
+  }
 }
