--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/cbeulke/simple-kanban#readme",
   "dependencies": {
     "hapi": "^15.1.1",
-    "inert": "^4.0.2"
+    "inert": "^4.0.2",
+    "jquery": "^3.1.1",
+    "semantic-ui-css": "^2.2.4"
   }
 }
