crud-logik implementiert

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hapi": "^15.1.1",
     "inert": "^4.0.2",
     "jquery": "^3.1.1",
+    "mysql": "^2.11.1",
     "semantic-ui-css": "^2.2.4"
   }
 }
