--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/cbeulke/simple-kanban#readme",
   "dependencies": {
     "angular": "^1.5.8",
-    "angular-drag-and-drop-lists": "^1.4.0",
+    "angular-dragula": "^1.2.8",
     "hapi": "^15.1.1",
     "inert": "^4.0.2",
     "jquery": "^3.1.1",
