--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-dragula": "^1.2.8",
+    "angular-route": "^1.5.8",
     "hapi": "^15.1.1",
+    "hapi-auth-jwt": "^4.0.0",
     "inert": "^4.0.2",
     "jquery": "^3.1.1",
+    "jsonwebtoken": "^7.1.9",
     "mysql": "^2.11.1",
     "noogger": "^0.1.4",
     "semantic-ui-css": "^2.2.4"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-hapi": "^0.12.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1"
   }
