--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "2"
 services:
   web:
-    build: .
+    image: node
+    working_dir: /app
+    command: node start.js
     ports:
       - "3000:3000"
     links:
